--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       <span></span>
       <span></span>
     </div>
-    <a href="" class="nav__shopLink uppercase">acheter</a>
+    <a href="https://boutique-masque-antipollution.fr/collections/frontpage" class="nav__shopLink uppercase">acheter</a>
     <div class="nav__logo">
       <img src="dist/img/header/logo-rpur.png" alt="r-pur">
     </div>
     <div class="nav__user">
-      <a href="">
+      <a href="https://boutique-masque-antipollution.fr/account/login">
         <img src="dist/img/header/compte.png" alt="">
       </a>
-      <a href="">
+      <a href="https://boutique-masque-antipollution.fr/cart">
         <img src="dist/img/header/panier.png" alt="">
       </a>
     </div>
@@ -67,7 +67,7 @@
         <p class="home-01__text text">
           Ce filtre de nouvelle génération offre la meilleure filtration au monde et se positionne au delà de la plus haute norme européenne des masques respiratoires FFP3.
         </p>
-        <a href="" class="buy-cta uppercase">acheter</a>
+        <a href="https://boutique-masque-antipollution.fr/collections/frontpage/products/1-x-r-pur-nano-filtre" class="buy-cta uppercase">acheter</a>
       </div>
     </div>
   </section>
@@ -98,17 +98,17 @@
           <img src="dist/img/contexte/france.png" alt="">
         </div>
         <div class="home-02__gridItem">
-          <img src="dist/img/contexte/humains-48.png" alt="">        
+          <img src="dist/img/contexte/humains-48.png" alt="">
         </div>
         <div class="home-02__gridItem home-02__gridItem--place">
           <p class="uppercase">Monde</p>
           <img class="home-02__filet" src="dist/img/contexte/filet.png" alt="">
         </div>
         <div class="home-02__gridItem">
-          <img src="dist/img/contexte/monde.png" alt="">        
+          <img src="dist/img/contexte/monde.png" alt="">
         </div>
         <div class="home-02__gridItem">
-          <img src="dist/img/contexte/humains-55.png" alt="">        
+          <img src="dist/img/contexte/humains-55.png" alt="">
         </div>
       </div>
       <div class="home-02__grid home-02__grid--xs">
@@ -124,13 +124,13 @@
           <img src="dist/img/contexte/france.png" alt="">
         </div>
         <div class="home-02__gridItem">
-          <img src="dist/img/contexte/humains-48.png" alt="">        
+          <img src="dist/img/contexte/humains-48.png" alt="">
         </div>
         <div class="home-02__gridItem larger">
-          <img src="dist/img/contexte/monde.png" alt="">        
+          <img src="dist/img/contexte/monde.png" alt="">
         </div>
         <div class="home-02__gridItem">
-          <img src="dist/img/contexte/humains-55.png" alt="">        
+          <img src="dist/img/contexte/humains-55.png" alt="">
         </div>
       </div>
       <div class="home-02__lastBlock">
@@ -145,7 +145,7 @@
   </section>
   <section class="home-03">
     <div class="home-03__imgWrap">
-      <img src="dist/img/points/masque-filaire.png" alt=""><img src="dist/img/points/visu-nuage.jpg" alt="">      
+      <img src="dist/img/points/masque-filaire.png" alt=""><img src="dist/img/points/visu-nuage.jpg" alt="">
     </div>
     <h2 class="home-title home-03__title uppercase">
       03 - nos points forts
@@ -160,10 +160,10 @@
           Ce tissu est utilisé notamment dans les tenues militaires des forces spéciales ou dans la haute couture.
         </p>
       </div>
-      <img class="home-03__visu" src="dist/img/points/tissu-deperlant.png" alt="">      
+      <img class="home-03__visu" src="dist/img/points/tissu-deperlant.png" alt="">
     </div>
     <div class="home-03__row hidden-xs">
-      <img class="home-03__visu" src="dist/img/points/int-doux.png" alt="">            
+      <img class="home-03__visu" src="dist/img/points/int-doux.png" alt="">
       <div class="home-03__card home-03__card--right">
         <h3 class="home-03__cardTitle"><strong>Tissu déperlant</strong> - Water repellant</h3>
         <p class="home-03__cardText text">
@@ -184,7 +184,7 @@
           Ce tissu est utilisé notamment dans les tenues militaires des forces spéciales ou dans la haute couture.
         </p>
       </div>
-      <img class="home-03__visu" src="dist/img/points/int-doux.png" alt="">                
+      <img class="home-03__visu" src="dist/img/points/int-doux.png" alt="">
     </div>
     <div class="home-03__row">
       <div class="home-03__card">
@@ -196,10 +196,10 @@
           Ce tissu est utilisé notamment dans les tenues militaires des forces spéciales ou dans la haute couture.
         </p>
       </div>
-      <img class="home-03__visu" src="dist/img/points/attaches.png" alt="">      
+      <img class="home-03__visu" src="dist/img/points/attaches.png" alt="">
     </div>
     <div class="home-03__row hidden-xs">
-      <img class="home-03__visu" src="dist/img/points/valve_white.jpg" alt="">      
+      <img class="home-03__visu" src="dist/img/points/valve_white.jpg" alt="">
       <div class="home-03__card home-03__card--right">
         <h3 class="home-03__cardTitle"><strong>Tissu déperlant</strong> - Water repellant</h3>
         <p class="home-03__cardText text">
@@ -220,12 +220,12 @@
           Ce tissu est utilisé notamment dans les tenues militaires des forces spéciales ou dans la haute couture.
         </p>
       </div>
-      <img class="home-03__visu" src="dist/img/points/valve_white.jpg" alt="">          
+      <img class="home-03__visu" src="dist/img/points/valve_white.jpg" alt="">
     </div>
   </section>
   <section class="home-04">
     <div class="container">
-      <p class="home-section__name">Filtration</p>    
+      <p class="home-section__name">Filtration</p>
       <div class="home-04__description">
         <h2 class="home-title home-01__title uppercase">
           04 - filtration
@@ -296,24 +296,24 @@
         <div class="home-particules__line home-particules__line--short"></div>
         <div class="home-particules__circle"></div>
         <div class="home-particules__line"></div>
-        <div class="home-particules__circle"></div>        
+        <div class="home-particules__circle"></div>
         <div class="home-particules__line"></div>
         <div class="home-particules__circle"></div>
-        <div class="home-particules__line"></div>    
-        <div class="home-particules__circle"></div>                          
-        <div class="home-particules__line home-particules__line--short"></div>        
+        <div class="home-particules__line"></div>
+        <div class="home-particules__circle"></div>
+        <div class="home-particules__line home-particules__line--short"></div>
       </div>
       <div class="home-particules__microns visible-xs">
         <p>10 microns</p>
         <p>2,5 microns</p>
         <p>0,4 microns</p>
-        <p>0,04 microns</p>        
+        <p>0,04 microns</p>
       </div>
       <div class="home-particules__FFP hidden-xs">
         <img class="home-particules__FFPItem" src="dist/img/particules/none.png"/>
         <p class="home-particules__FFPItem">FFP1</p>
         <p class="home-particules__FFPItem">FFP3</p>
-        <p class="home-particules__FFPItem">FFP3+</p>        
+        <p class="home-particules__FFPItem">FFP3+</p>
       </div>
     </div>
   </section>
@@ -371,20 +371,20 @@
             <strong>L'équipe R-PUR</strong>
           </p>
           <p class="home-06__text text">
-            L'équipe derrière la création du masque R-PUR est jeune, créative, technique et prête à tout pour créer la solution dont nous rêvions. 
+            L'équipe derrière la création du masque R-PUR est jeune, créative, technique et prête à tout pour créer la solution dont nous rêvions.
             <strong>Avec l'aide de graphistes, stylistes et ingénieurs, nous avons pu mettre au point une solution aussi efficace qu'esthétique, pour votre usage quotidien.</strong>
           </p>
           <p class="home-06__text text">
             Nous avons collaboré avec des experts dans leur domaine, comme Pierre-Henry Bor, styliste réputé qui développe déjà depuis plusieurs années sa marque de prêt à porter et gagnant de plusieurs concours comme Podium Jeunes Stylistes ou Projet Fashion, émission de mode sur D8.
           </p>
         </div>
-        <img src="dist/img/france/paris.png" alt="">        
+        <img src="dist/img/france/paris.png" alt="">
       </div>
       <div class="home-06__gridItem home-06__gridItem--small">
         <img src="dist/img/france/lab.png" alt="">
       </div>
       <div class="home-06__gridItem home-06__gridItem--small">
-        <img src="dist/img/france/office.png" alt="">        
+        <img src="dist/img/france/office.png" alt="">
       </div>
     </div>
   </section>
@@ -399,22 +399,22 @@
           <img src="dist/img/logos/bge.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/bpi.jpg" alt="">       
+          <img src="dist/img/logos/bpi.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/generali.jpg" alt="">        
+          <img src="dist/img/logos/generali.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/hesam.jpg" alt="">        
+          <img src="dist/img/logos/hesam.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/french-tech.jpg" alt="">        
+          <img src="dist/img/logos/french-tech.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/societe-g.jpg" alt="">       
+          <img src="dist/img/logos/societe-g.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/suite.png" alt="">             
+          <img src="dist/img/logos/suite.png" alt="">
         </div>
       </div>
     </div>
@@ -428,22 +428,22 @@
           <img src="dist/img/logos/epitech.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/france-5.jpg" alt="">        
+          <img src="dist/img/logos/france-5.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/leparisien.jpg" alt="">        
+          <img src="dist/img/logos/leparisien.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/motoJ.jpg" alt="">        
+          <img src="dist/img/logos/motoJ.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/nrj.jpg" alt="">        
+          <img src="dist/img/logos/nrj.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/xerfi.jpg" alt="">        
+          <img src="dist/img/logos/xerfi.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/suite.png" alt="">             
+          <img src="dist/img/logos/suite.png" alt="">
         </div>
       </div>
     </div>
@@ -570,9 +570,9 @@
           155 Boulevard de l'Hôpital<br>
           Paris-13E-Arrondissement, Île-de-France, 75013 <br>
           France
-        </p>        
+        </p>
       </div>
     </div>
   </section>
 </body>
-</html> 
+</html>
