--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>R-PUR</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" href="dist/slick/slick.css">
   <link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 <body>
@@ -15,15 +17,15 @@
       <span></span>
       <span></span>
     </div>
-    <a href="https://boutique-masque-antipollution.fr/collections/frontpage" class="nav__shopLink uppercase">acheter</a>
+    <a href="" class="nav__shopLink uppercase">acheter</a>
     <div class="nav__logo">
       <img src="dist/img/header/logo-rpur.png" alt="r-pur">
     </div>
     <div class="nav__user">
-      <a href="https://boutique-masque-antipollution.fr/account/login">
+      <a href="">
         <img src="dist/img/header/compte.png" alt="">
       </a>
-      <a href="https://boutique-masque-antipollution.fr/cart">
+      <a href="">
         <img src="dist/img/header/panier.png" alt="">
       </a>
     </div>
@@ -34,6 +36,11 @@
       <span>respirer mieux,</span>
       <span>vivre plus longtemps</span>
     </h4>
+    <div class="homeIntro__bars">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </section>
   <section class="home-section home-01">
     <div class="container">
@@ -67,7 +74,7 @@
         <p class="home-01__text text">
           Ce filtre de nouvelle génération offre la meilleure filtration au monde et se positionne au delà de la plus haute norme européenne des masques respiratoires FFP3.
         </p>
-        <a href="https://boutique-masque-antipollution.fr/collections/frontpage/products/1-x-r-pur-nano-filtre" class="buy-cta uppercase">acheter</a>
+        <a href="" class="buy-cta uppercase">acheter</a>
       </div>
     </div>
   </section>
@@ -98,17 +105,17 @@
           <img src="dist/img/contexte/france.png" alt="">
         </div>
         <div class="home-02__gridItem">
-          <img src="dist/img/contexte/humains-48.png" alt="">
+          <img src="dist/img/contexte/humains-48.png" alt="">        
         </div>
         <div class="home-02__gridItem home-02__gridItem--place">
           <p class="uppercase">Monde</p>
           <img class="home-02__filet" src="dist/img/contexte/filet.png" alt="">
         </div>
         <div class="home-02__gridItem">
-          <img src="dist/img/contexte/monde.png" alt="">
+          <img src="dist/img/contexte/monde.png" alt="">        
         </div>
         <div class="home-02__gridItem">
-          <img src="dist/img/contexte/humains-55.png" alt="">
+          <img src="dist/img/contexte/humains-55.png" alt="">        
         </div>
       </div>
       <div class="home-02__grid home-02__grid--xs">
@@ -124,13 +131,13 @@
           <img src="dist/img/contexte/france.png" alt="">
         </div>
         <div class="home-02__gridItem">
-          <img src="dist/img/contexte/humains-48.png" alt="">
+          <img src="dist/img/contexte/humains-48.png" alt="">        
         </div>
         <div class="home-02__gridItem larger">
-          <img src="dist/img/contexte/monde.png" alt="">
+          <img src="dist/img/contexte/monde.png" alt="">        
         </div>
         <div class="home-02__gridItem">
-          <img src="dist/img/contexte/humains-55.png" alt="">
+          <img src="dist/img/contexte/humains-55.png" alt="">        
         </div>
       </div>
       <div class="home-02__lastBlock">
@@ -145,7 +152,12 @@
   </section>
   <section class="home-03">
     <div class="home-03__imgWrap">
-      <img src="dist/img/points/masque-filaire.png" alt=""><img src="dist/img/points/visu-nuage.jpg" alt="">
+      <div class="home-03__imgWrapItem mask">
+        <img src="dist/img/points/masque-filaire.png" alt="">
+      </div>
+      <div class="home-03__imgWrapItem">
+        <img src="dist/img/points/visu-nuage.jpg" alt="">
+      </div>
     </div>
     <h2 class="home-title home-03__title uppercase">
       03 - nos points forts
@@ -160,10 +172,10 @@
           Ce tissu est utilisé notamment dans les tenues militaires des forces spéciales ou dans la haute couture.
         </p>
       </div>
-      <img class="home-03__visu" src="dist/img/points/tissu-deperlant.png" alt="">
+      <img class="home-03__visu" src="dist/img/points/tissu-deperlant.png" alt="">      
     </div>
     <div class="home-03__row hidden-xs">
-      <img class="home-03__visu" src="dist/img/points/int-doux.png" alt="">
+      <img class="home-03__visu" src="dist/img/points/int-doux.png" alt="">            
       <div class="home-03__card home-03__card--right">
         <h3 class="home-03__cardTitle"><strong>Tissu déperlant</strong> - Water repellant</h3>
         <p class="home-03__cardText text">
@@ -184,7 +196,7 @@
           Ce tissu est utilisé notamment dans les tenues militaires des forces spéciales ou dans la haute couture.
         </p>
       </div>
-      <img class="home-03__visu" src="dist/img/points/int-doux.png" alt="">
+      <img class="home-03__visu" src="dist/img/points/int-doux.png" alt="">                
     </div>
     <div class="home-03__row">
       <div class="home-03__card">
@@ -196,10 +208,10 @@
           Ce tissu est utilisé notamment dans les tenues militaires des forces spéciales ou dans la haute couture.
         </p>
       </div>
-      <img class="home-03__visu" src="dist/img/points/attaches.png" alt="">
+      <img class="home-03__visu" src="dist/img/points/attaches.png" alt="">      
     </div>
     <div class="home-03__row hidden-xs">
-      <img class="home-03__visu" src="dist/img/points/valve_white.jpg" alt="">
+      <img class="home-03__visu" src="dist/img/points/valve_white.png" alt="">      
       <div class="home-03__card home-03__card--right">
         <h3 class="home-03__cardTitle"><strong>Tissu déperlant</strong> - Water repellant</h3>
         <p class="home-03__cardText text">
@@ -220,12 +232,12 @@
           Ce tissu est utilisé notamment dans les tenues militaires des forces spéciales ou dans la haute couture.
         </p>
       </div>
-      <img class="home-03__visu" src="dist/img/points/valve_white.jpg" alt="">
+      <img class="home-03__visu" src="dist/img/points/valve_white.jpg" alt="">          
     </div>
   </section>
   <section class="home-04">
     <div class="container">
-      <p class="home-section__name">Filtration</p>
+      <p class="home-section__name">Filtration</p>    
       <div class="home-04__description">
         <h2 class="home-title home-01__title uppercase">
           04 - filtration
@@ -234,7 +246,7 @@
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores iste fugiat nulla quaerat debitis. Totam modi placeat recusandae tempora, temporibus perferendis fuga reprehenderit ea amet eaque, dolores voluptatibus, delectus eveniet.
         </p>
         <img class="home-04__nano-logo--xs visible-xs" src="dist/img/logos/logo-nano-F.png" alt="">
-        <div class="visible-xs">
+        <div class="home-04__desc">
           <p class="home-04__legend">
             <span>1 - </span>Valve d'estraction de l'air chaud
           </p>
@@ -253,7 +265,7 @@
         </div>
       </div>
       <div class="home-04__visu hidden-xs">
-        <img src="dist/img/produit/filtration-complet.png" alt="">
+        <img src="dist/img/produit/filtration-complet-2.png" alt="">
         <p class="home-04__caption home-04__caption--valve">Valve d'estraction de l'air chaud</p>
         <p class="home-04__caption home-04__caption--couche">Couche déperlante</p>
         <p class="home-04__caption home-04__caption--charbon">Filtration charbon actif</p>
@@ -296,30 +308,30 @@
         <div class="home-particules__line home-particules__line--short"></div>
         <div class="home-particules__circle"></div>
         <div class="home-particules__line"></div>
-        <div class="home-particules__circle"></div>
+        <div class="home-particules__circle"></div>        
         <div class="home-particules__line"></div>
         <div class="home-particules__circle"></div>
-        <div class="home-particules__line"></div>
-        <div class="home-particules__circle"></div>
-        <div class="home-particules__line home-particules__line--short"></div>
+        <div class="home-particules__line"></div>    
+        <div class="home-particules__circle"></div>                          
+        <div class="home-particules__line home-particules__line--short"></div>        
       </div>
       <div class="home-particules__microns visible-xs">
         <p>10 microns</p>
         <p>2,5 microns</p>
         <p>0,4 microns</p>
-        <p>0,04 microns</p>
+        <p>0,04 microns</p>        
       </div>
       <div class="home-particules__FFP hidden-xs">
         <img class="home-particules__FFPItem" src="dist/img/particules/none.png"/>
         <p class="home-particules__FFPItem">FFP1</p>
         <p class="home-particules__FFPItem">FFP3</p>
-        <p class="home-particules__FFPItem">FFP3+</p>
+        <p class="home-particules__FFPItem">FFP3+</p>        
       </div>
     </div>
   </section>
   <section class="home-05 container">
     <div class="home-05__mobile hidden-xs">
-      <img src="dist/img/produit/mobile.png" alt="">
+      <img src="dist/img/produit/mobiles.png" alt="">
     </div>
     <div class="home-05__description">
       <h2 class="home-title home-05__title uppercase">
@@ -371,21 +383,35 @@
             <strong>L'équipe R-PUR</strong>
           </p>
           <p class="home-06__text text">
-            L'équipe derrière la création du masque R-PUR est jeune, créative, technique et prête à tout pour créer la solution dont nous rêvions.
+            L'équipe derrière la création du masque R-PUR est jeune, créative, technique et prête à tout pour créer la solution dont nous rêvions. 
             <strong>Avec l'aide de graphistes, stylistes et ingénieurs, nous avons pu mettre au point une solution aussi efficace qu'esthétique, pour votre usage quotidien.</strong>
           </p>
           <p class="home-06__text text">
             Nous avons collaboré avec des experts dans leur domaine, comme Pierre-Henry Bor, styliste réputé qui développe déjà depuis plusieurs années sa marque de prêt à porter et gagnant de plusieurs concours comme Podium Jeunes Stylistes ou Projet Fashion, émission de mode sur D8.
           </p>
         </div>
-        <img src="dist/img/france/paris.png" alt="">
+        <img src="dist/img/france/paris.png" alt="">        
       </div>
       <div class="home-06__gridItem home-06__gridItem--small">
         <img src="dist/img/france/lab.png" alt="">
       </div>
       <div class="home-06__gridItem home-06__gridItem--small">
-        <img src="dist/img/france/office.png" alt="">
+        <img src="dist/img/france/office.png" alt="">        
       </div>
+    </div>
+  </section>
+  <section class="home-review">
+    <div class="home-carousel multiple-items">
+      <div class="home-carousel__item">
+        <div class="top">
+          <div class="name">
+            <p>marie b.</p>
+            <p class="city">Paris</p>
+          </div>
+        </div>
+      </div>
+      <div class="home-carousel__item"></div>
+      <div class="home-carousel__item"></div>
     </div>
   </section>
   <section class="home-partners">
@@ -399,22 +425,22 @@
           <img src="dist/img/logos/bge.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/bpi.jpg" alt="">
+          <img src="dist/img/logos/bpi.jpg" alt="">       
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/generali.jpg" alt="">
+          <img src="dist/img/logos/generali.jpg" alt="">        
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/hesam.jpg" alt="">
+          <img src="dist/img/logos/hesam.jpg" alt="">        
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/french-tech.jpg" alt="">
+          <img src="dist/img/logos/french-tech.jpg" alt="">        
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/societe-g.jpg" alt="">
+          <img src="dist/img/logos/societe-g.jpg" alt="">       
         </div>
-        <div class="home-partners__gridItem">
-          <img src="dist/img/logos/suite.png" alt="">
+        <div class="home-partners__gridItem dots">
+          <img src="dist/img/logos/suite.png" alt="">             
         </div>
       </div>
     </div>
@@ -428,39 +454,24 @@
           <img src="dist/img/logos/epitech.jpg" alt="">
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/france-5.jpg" alt="">
+          <img src="dist/img/logos/france-5.jpg" alt="">        
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/leparisien.jpg" alt="">
+          <img src="dist/img/logos/leparisien.jpg" alt="">        
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/motoJ.jpg" alt="">
+          <img src="dist/img/logos/motoJ.jpg" alt="">        
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/nrj.jpg" alt="">
+          <img src="dist/img/logos/nrj.jpg" alt="">        
         </div>
         <div class="home-partners__gridItem">
-          <img src="dist/img/logos/xerfi.jpg" alt="">
+          <img src="dist/img/logos/xerfi.jpg" alt="">        
         </div>
-        <div class="home-partners__gridItem">
-          <img src="dist/img/logos/suite.png" alt="">
+        <div class="home-partners__gridItem dots">
+          <img src="dist/img/logos/suite.png" alt="">             
         </div>
       </div>
-    </div>
-    <div class="home-partners__line">
-      <p class="home-partners__title home-partners__title--inline uppercase">Suiviez nous sur...</p>
-      <a href="">
-        <img src="dist/img/social/twitter.png" alt="" class="home-partners__social">
-      </a>
-      <a href="">
-        <img src="dist/img/social/insta.png" alt="" class="home-partners__social">
-      </a>
-      <a href="">
-        <img src="dist/img/social/facebook.png" alt="" class="home-partners__social">
-      </a>
-      <a href="">
-        <img src="dist/img/social/google.png" alt="" class="home-partners__social">
-      </a>
     </div>
   </section>
   <section class="home-follow">
@@ -532,12 +543,12 @@
     </div>
     </div>
   </section>
-  <section class="home-contact">
-    <div class="home-contact__head">
+  <section id="accordion" class="home-contact">
+    <div class="home-contact__head accordion-toggle">
       <p class="uppercase">Nous contacter</p>
       <img src="dist/img/arrow.png" alt="" class="home-contact__arrow">
     </div>
-    <div class="home-contact__container">
+    <div class="home-contact__container accordion-content">
       <form action="" class="home-contact__form">
         <p class="text">Si vous avez des questions n'hésitez pas à prendre contact avec nous à l'aide du formulaire suivant :</p>
         <div class="home-contact__formLine">
@@ -567,12 +578,45 @@
       <div class="home-contact__adress">
         <p class="home-contact__adressLabel uppercase text-center">Notre adresse</p>
         <p class="home-contact__location text-center text">
-          155 Boulevard de l'Hôpital<br>
-          Paris-13E-Arrondissement, Île-de-France, 75013 <br>
-          France
-        </p>
+          Station F,<br>
+          5 Parvis Alan Turing, 75013 Paris
+        </p>        
       </div>
     </div>
   </section>
+  <section class="join">
+    <div class="join-left">
+      <p class="join__catch">
+        REJOIGNEZ NOUS <span>recevez la newsletter RPUR</span>
+      </p>
+      <form action="" class="join-form">
+        <input type="email" name="" placeholder="votre email">
+        <input type="submit" value="S'inscrire">
+      </form>
+    </div>
+    <div class="join-separation"></div>
+    <div class="join-right">
+      <p class="join-social__catch uppercase">
+        suivez nous sur
+      </p>
+      <div class="join-social__social-wrap">
+        <a href="">
+          <img src="dist/img/social/white/twitter.png" alt="" class="join-social__item">
+        </a>
+        <a href="">
+          <img src="dist/img/social/white/insta.png" alt="" class="join-social__item">
+        </a>
+        <a href="">
+          <img src="dist/img/social/white/fb.png" alt="" class="join-social__item">
+        </a>
+        <a href="">
+          <img src="dist/img/social/white/google.png" alt="" class="join-social__item">
+        </a>
+      </div>
+    </div>
+  </section>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="./dist/slick/slick.min.js"></script>
+  <script src="./dist/js/home.js"></script>  
 </body>
-</html>
+</html> 
